# chat-with-a-pdf

./: README.md  main.py  pyproject.toml
configs/: config.yml  log_config.yml
formatter/: __init__.py  jsonformatter.py
logging/: config.py
