[tool.poetry]
name = "chat-with-a-pdf"
version = "0.1.0"
description = ""
authors = ["gogsUser <gogs@gogs.gogs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.39.3"
llama-cpp-python = "0.2.56"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
haystack-ai = "^2.0.0"
pypdf = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
