[tool.poetry]
name = "chat-with-a-pdf"
version = "0.1.0"
description = ""
authors = ["gogsUser <gogs@gogs.gogs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.37.2"
llama-cpp-python = "0.2.56"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
pypdf = "^4.1.0"
faiss-gpu = "^1.7.2"
farm-haystack = {extras = ["sql"], version = "^1.25.2"}
colorlog = "^6.8.2"
python-box = "^7.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
